# pampero-engine

./: Cargo.toml  LICENSE  README.md
src/: entities.rs  event.rs  game_loop.rs  lib.rs  macros.rs  systems.rs
src/core/: game_loop.rs  game_loop_phase.rs  handlers.rs  mod.rs
src/ecs/: entities.rs  entity.rs  functions.rs  game_loop_systems.rs  mod.rs  system.rs  systems.rs  traits.rs
src/events/: event.rs  mod.rs
src/game_loop/: handlers.rs  mod.rs  phases.rs
tests/: entities.rs  lib.rs
